web/src/main/webapp/resources/css/default.css
/* ... */
.ctsms-datatable-header-button-column {
	width: 32px;
}

.ctsms-datatable-header-label-for-column {
	white-space: nowrap;
	border: none !important;
	width: 0px;
	padding: 2px;
}

.ctsms-datatable-header-input-column {
	white-space: nowrap;
	width: 0px;
	padding: 2px;
}

.ctsms-delete-pdf-files-button-column {
	width: 32px;
}

.ctsms-aggregated-pdf-files-button-column {
	width: 32px;
}

.ctsms-datatable-header-text-column {
	text-align: left;
}

.ctsms-rowexpansion-panelgrid {
	width: 100%;
}

.ctsms-notificationlist-rowexpansion-left-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
	max-width: 300px;
}

.ctsms-notificationlist-rowexpansion-left-column div {
	border: none;
}

.ctsms-notificationlist-rowexpansion-right-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
}

.ctsms-notificationlist-rowexpansion-right-column div {
	border: none;
}

.ctsms-notificationlist-rowexpansion-right-column pre {
	width: 600px;
	max-width: 600px;
	white-space: pre-wrap;
}



.ctsms-email-message {
	height:280px;
	border: 1px solid #999;
padding: 4px;
font: 10pt Arial,Verdana;
cursor: text;
overflow-y:scroll;
}

.ctsms-massmail-rowexpansion-left-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
	max-width: 300px;
}

.ctsms-massmail-rowexpansion-left-column td {
	border-style: hidden !important;
}

.ctsms-massmail-rowexpansion-left-column div {
	border: none;
}

.ctsms-massmail-rowexpansion-right-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
}

.ctsms-massmail-rowexpansion-right-column td {
	border-style: hidden !important;
}

.ctsms-massmail-rowexpansion-right-column div {
	border: none;
}

.ctsms-massmail-rowexpansion-right-column pre {
	min-width: 800px;
	white-space: pre-wrap;
}


.ctsms-systemmessage-left-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
	max-width: 400px;
	/* width: 100%; */
}

.ctsms-systemmessage-left-column div {
	border: none;
}

.ctsms-systemmessage-right-column {
	vertical-align: top;
	padding: 2px !important;
	max-width: 700px;
	overflow-x: auto !important;
	display: block;
	border: 1px solid;
	margin: 2px !important;
}

.ctsms-systemmessage-right-column div {
	border: none;
}

.ctsms-audittrail-left-column {
	vertical-align: top;
	border-style: hidden !important;
	padding: 2px !important;
	max-width: 400px;
	/* width: 100%; */
}

.ctsms-audittrail-left-column div {
	border: none;
}

.ctsms-audittrail-right-column {
	vertical-align: top;
	padding: 2px !important;
	max-width: 700px;
	overflow-x: auto !important;
	display: block;
	border: 1px solid;
	margin: 2px !important;
}

.ctsms-audittrail-right-column div {
	border: none;
}

.ctsms-recent-notification {

}

.ctsms-obsolete-notification {
	background: none;
	background-color: #dcdcdc;
	font-weight: lighter !important;
}

.ctsms-logo-column {
	background-image: url("../resources/images/css/logo_phoenix.png");
	background-position: left top;
	background-repeat: no-repeat;
	width: 38px;
}

.ctsms-usermenubar-column {
	width: 260px;
	white-space: nowrap;
}

.ctsms-statusbar {
	background-image: url("../resources/images/css/sponsors.png");
	background-position: right bottom;
	background-repeat: no-repeat;
	height: 30px;
	padding: 0;
}

.ctsms-statusbar-panelgrid {
	width: 100%;
	padding-right: 250px;
}

.ctsms-statusbar-left-column {
	width: 100%;
	white-space: nowrap;
	padding-right: 10px;
}

.ctsms-statusbar-version-column {
	white-space: nowrap;
	padding-right: 10px;
}

.ctsms-statusbar-contact-column {
	white-space: nowrap;
}

.ctsms-statusbar-icon {
	padding-left: 34px;
	display: block;
	background-repeat: no-repeat;
	height: 26px;
}

.ctsms-statusbar-icon-small {
	background-repeat: no-repeat;
	display: block;
	height: 16px;
	padding-left: 20px;
	padding-top: 1px;
}

.ctsms-toolbar-text {
	display: inline-block;
	padding-top: 0.6667em;
}

.ctsms-toolbar-icon {
	display: inline-block;
	width: 16px;
	height: 16px;
	padding-top: 0.5em;
	padding-right: 0.5em;
	background-repeat: no-repeat;
	background-position: 0px 6px;
}

.ctsms-field-icon {
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	text-indent: 20px;
	padding-left: 20px;
	padding-top: 2px;
	padding-bottom: 2px;
}

.ctsms-list-icon {
	min-height: 16px;
	display: inline-block;
	background-repeat: no-repeat;
	padding-left: 20px;
}

.ctsms-list-ui-icon {
    height: 16px;
    overflow: visible;
    padding-left: 2px;
    padding-top: 2px;
    text-indent: 20px;
    white-space: nowrap;
    width: 16px;
}

.ctsms-list-header-icon {
	min-height: 16px;
	display: inline-block;
	background-repeat: no-repeat;
	padding-left: 20px;
}

.ctsms-portalitem-icon {
	width: 48px;
	height: 48px;
	background-repeat: no-repeat;
	cursor: pointer;
}

.ctsms-signature-icon {
	width: 48px;
	height: 48px;
	background-repeat: no-repeat;
}

.ctsms-menubar-icon {
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	text-indent: 20px;
	padding-left: 2px;
	padding-top: 2px;
}

.ctsms-mimetype-unknown {
	background-image: url(../resources/images/mimetypes/_misc.gif);
}

.ctsms-icon-filefolder {
	background-image: url(../resources/images/css/folder.png) !important;
}

.ctsms-icon-xls {
	background-image: url(../resources/images/css/excel_small.gif) !important;
}

.ctsms-icon-pdf {
	background-image: url(../resources/images/css/pdf_small.gif) !important;
}

.ctsms-icon-encryption {
	background-image: url(../resources/images/css/encryption.png) !important;
}

.ctsms-icon-noencryption {
	background-image: url(../resources/images/css/noencryption.png) !important;
}

.ctsms-icon-encrypted {
	background-image: url(../resources/images/css/lock.png) !important;
}

.ctsms-icon-decrypted {
	background-image: url(../resources/images/css/lock_open.png) !important;
}

.ctsms-icon-searchencrypted {
	background-image: url(../resources/images/css/lock_view.png) !important;
}
/* ... */

